syntax = "proto3";

package users;


import "google/protobuf/timestamp.proto";

service UsersService {
    rpc Login(LoginRequest) returns (LoginResponse) {
    }

    rpc Register(RegisterRequest) returns (RegisterResponse) {
    }
}

message User {
    int32 id = 1;
    string token = 2;
    string login = 3;
    uint64 last_read_date = 4;

}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    User user = 1;
}

